--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -11,6 +11,57 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
 }
 
+#myModal .modal-dialog {
+    width: auto;
+    max-width: 740px;
+}
+
+#myModal .modal-header {
+    border: none;
+}
+
+#myModal .modal-body {
+    padding: 0 32px 32px;
+}
+
+#myModal input, #myModal textarea {
+    border-radius: 0;
+}
+
+#myModal input {
+    height: 42px;
+    line-height: 42px;
+}
+
+#myModal textarea {
+    height: 162px;
+    resize: none;
+    margin-bottom: 30px;
+}
+
+#myModal .btn {
+    border: none;
+    width: 100%;
+    height: 52px;
+    line-height: 40px;
+    font-weight: bold;
+}
+
+#myModal form .errors {
+    font-size: 12px;
+    color: #f44027;
+    margin-bottom: 30px;
+    height: 34px;
+}
+
+#myModal form .form-feedback {
+    margin-top: 25px;
+    border: 2px solid #ffbe01;
+    border-radius: 5px;
+    height: 64px;
+    visibility: hidden;
+}
+
 
 /* ---- upper navigation styles ---- */
 
