--- a/public_html/css/responsive.css
+++ b/public_html/css/responsive.css
@@ -23,6 +23,58 @@
     header .navbar-default .navbar-collapse {
         width: 100vw;
     }
+    /* ---- banner styles ---- */
+    .banner .bxslider li .slider-content {
+        top: 10%;
+    }
+    .banner li .slider-content h1 {
+        font-size: 36px;
+        margin-bottom: 30px;
+    }
+    .banner li .slider-content h4 {
+        font-size: 18px;
+        margin-bottom: 30px;
+    }
+    .banner li .slider-content .btn {
+        width: 150px;
+        font-size: 15px;
+        height: 45px;
+        line-height: 33px;
+    }
+    .banner .bxslider li .slider-content p {
+        margin-bottom: 30px;
+    }
+    .banner .bxslider li .slider-content-01 h4 {
+        text-align: right;
+        display: inline-block;
+        padding: 0 10px;
+        height: 48px;
+        line-height: 48px;
+    }
+    /* ---- intro styles ---- */
+    .intro .container {
+        max-width: 750px;
+    }
+    /* ---- schedule styles ---- */
+    .schedule .get-appointment .form-feedback {
+        height: auto;
+    }
+    /* ---- services styles ---- */
+    .services .nav-tabs {
+        float: left;
+    }
+    .services .tab-content {
+        float: left;
+        width: 61%;
+    }
+    /* ---- visit store styles ---- */
+    .visit-store .store-text {
+        margin-bottom: 0;
+    }
+    .visit-store a {
+        float: right;
+    }
+    /* ---- why choose us styles ---- */
 }
 
 @media (min-width: 992px) {
@@ -71,6 +123,36 @@
     header .dropdown-menu>li>a:hover, header .dropdown-menu>li>a:focus {
         background-color: #0a68b1;
     }
+    /* ---- banner styles ---- */
+    .banner .bxslider li .slider-content {
+        top: 20%;
+    }
+    .banner li .slider-content h1 {
+        font-size: 54px;
+        margin-bottom: 40px;
+    }
+    .banner li .slider-content h4 {
+        font-size: 20px;
+        margin-bottom: 40px;
+    }
+    .banner .bxslider li .slider-content p {
+        margin-bottom: 40px;
+    }
+    .banner .bxslider li .slider-content-01 h4 {
+        height: 54px;
+        line-height: 54px;
+    }
+    /* ---- intro styles ---- */
+    .intro .container {
+        max-width: 970px;
+    }
+    /* ---- schedule styles ---- */
+    /* ---- services styles ---- */
+    /* ---- visit store styles ---- */
+    /* ---- why choose us styles ---- */
+    .why-choose-us article h3 {
+        font-size: 16px;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -87,4 +169,47 @@
     header .navbar-default .navbar-nav>li {
         margin-right: 32px;
     }
+    /* ---- banner styles ---- */
+    /* ---- intro styles ---- */
+    .intro {
+        padding: 100px 0;
+    }
+    .intro .container {
+        max-width: 1170px;
+    }
+    .intro article {
+        margin-bottom: 0;
+    }
+    .intro article .content {
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        right: 25px;
+        z-index: 100;
+    }
+    .intro article .intro-icon {
+        left: 25px;
+        top: 40%;
+    }
+    .intro article p:first-of-type {
+        padding-bottom: 20px;
+    }
+    .intro article p:nth-of-type(2) {
+        padding: 20px 0;
+        transform: translateY(50px);
+    }
+    .intro article:hover h2, .intro article:hover p:first-of-type {
+        transform: translateX(88px);
+    }
+    .intro article:hover .intro-icon {
+        top: 32px;
+        opacity: 1;
+    }
+    /* ---- schedule styles ---- */
+    /* ---- services styles ---- */
+    .services .tab-content {
+        max-width: 510px;
+    }
+    /* ---- visit store styles ---- */
+    /* ---- why choose us styles ---- */
 }
